--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-mouse-select": "^1.1.2"
+    "react-mouse-select": "^1.1.2",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
