--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^23.14.0",
+    "i18next-http-backend": "^2.6.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-mouse-select": "^1.1.2",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@types/i18next": "^12.1.0",
+    "@types/react": "^18.3.5",
     "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
